# piper

./: CMakeLists.txt  LICENSE  README.md  example.piper
docs/: README.md  RETURNTYPE.md  STAGES.md  SYNTAX.md
src/: jitter.cpp  piper-text-to-token.cpp  piper-token-to-cst.cpp  piper.cpp  scanner.cpp  stage_filetotokens.cpp  stage_tokenstotree.cpp
src/expressions/: add_expression.cpp  call_expression.cpp  double_colon_expression.cpp  expression.cpp  format_string_expression.cpp  greater_than_expression.cpp  identifier_expression.cpp  less_than_expression.cpp  number_expression.cpp  sub_expression.cpp
src/includes/: data_type.hpp  scanner.hpp  stage.hpp  stage_filetotokens.hpp  stage_tokenstotree.hpp  tokentype.hpp
src/includes/expressions/: add_expression.hpp  call_expression.hpp  double_colon_expression.hpp  expression.hpp  format_string_expression.hpp  greater_than_expression.hpp  identifier_expression.hpp  less_than_expression.hpp  number_expression.hpp  sub_expression.hpp
src/includes/statements/: block_statement.hpp  expression_statement.hpp  function_statement.hpp  if_statement.hpp  import_statement.hpp  return_statement.hpp  statement.hpp
src/statements/: block_statement.cpp  expression_statement.cpp  function_statement.cpp  if_statement.cpp  import_statement.cpp  return_statement.cpp
